<resources>
    <string name="app_name">SIP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cmr_foodies">CMR FOODIES</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="name">Name</string>
    <string name="register1">Register</string>
    <string name="already_registered">Already Registered?</string>
    <string name="sign_in1">Sign in</string>
    <string name="sign_in2">Sign in</string>
    <string name="sign_in3">Sign in</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="daily_meal1">Daily Meal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="name1">NAME</string>
    <string name="name_gmail_com">name@gmail.com</string>
    <string name="log_out">Log Out</string>
    <string name="log_out1">Log Out</string>
    <string name="search_your_food">Search your food</string>
    <string name="hello_folks">Hello Folks!</string>
    <string name="what_would_you_like_to_have">What would you like to have?</string>
    <string name="breakfast">Breakfast</string>
    <string name="product_name">Product Name</string>
    <string name="_8_00_10_30">8:00 - 10:30</string>
    <string name="price">price</string>
    <string name="price1">Price</string>
</resources>